force-app/main/default/objects/OperationPaymentRequest__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Inland</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Sea&amp;Air</fullName>
            </value>
            <value>
                <fullName>Sea&amp;Inland</fullName>
            </value>
            <value>
                <fullName>Sea&amp;River</fullName>
            </value>
            <value>
                <fullName>Sea&amp;Rail</fullName>
            </value>
            <value>
                <fullName>Air&amp;Inland</fullName>
            </value>
            <value>
                <fullName>Air&amp;River</fullName>
            </value>
            <value>
                <fullName>Air&amp;Rail</fullName>
            </value>
            <value>
                <fullName>Inland&amp;River</fullName>
            </value>
            <value>
                <fullName>Inland&amp;Rail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>