force-app/main/default/objects/OperationPaymentRequest__c/fields/Trx_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Trx_Due_Date__c</fullName>
    <label>Trx Due Date</label>
    <type>Date</type>
</CustomField>