force-app/main/default/objects/OperationPaymentRequest__c/fields/Trx_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Trx_Plan_Description__c</fullName>
    <label>Trx Plan Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>