force-app/main/default/objects/OperationPaymentRequest__c/fields/Trx_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Trx_Plan_ID__c</fullName>
    <label>Trx Plan ID</label>
    <type>AutoNumber</type>
</CustomField>