force-app/main/default/objects/OperationPaymentRequest__c/fields/Trx_Plan_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Trx_Plan_Source_Category__c</fullName>
    <label>Trx Plan Source Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>