force-app/main/default/objects/OperationPaymentRequest__c/fields/Trx_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Trx_Plan_Type__c</fullName>
    <label>Trx Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>