force-app/main/default/objects/OperationPaymentRequest__c/fields/UnitPriceofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingFCY__c</fullName>
    <label>Unit Price of Buying (FCY)</label>
    <summarizedField>FTMSBillPaymentRequest__c.UnitPriceofBuyingFCY__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>