force-app/main/default/objects/OperationPaymentRequest__c/fields/Unpaid_balance_for_payment__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_balance_for_payment__c</fullName>
    <formula>IF( RecordType.Name = &quot;Payment Request (FCY)&quot;,  ActualAmountforPaymentUSD__c  -   TotalBuyingInclTaxFCY__c  ,  ActualAmountforPaymentVND__c -  TotalBuyingInclTaxLocal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance for Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>