force-app/main/default/objects/OperationPaymentRequest__c/fields/UnpaidBalanceforPaymentUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceforPaymentUSD__c</fullName>
    <formula>ActualAmountforPaymentUSD__c -  TotalBuyingInclTaxUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance for Payment (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>