force-app/main/default/objects/OperationPaymentRequest__c/fields/UnpaidBalanceforPaymentVND__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceforPaymentVND__c</fullName>
    <formula>ActualAmountforPaymentVND__c -  TotalBuyingInclTaxVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance for Payment (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>