force-app/main/default/objects/OperationPaymentRequest__c/fields/Update_AP__c.field-meta.xml
<CustomField>
    <fullName>Update_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update AP</label>
    <type>Checkbox</type>
</CustomField>