force-app/main/default/objects/OperationPaymentRequest__c/recordTypes/LiquidationRequestFCY.recordType-meta.xml
<RecordType>
    <fullName>LiquidationRequestFCY</fullName>
    <active>true</active>
    <label>Liquidation Request (FCY)</label>
</RecordType>