force-app/main/default/objects/OperationPaymentRequest__c/recordTypes/PaymentRequestFCY.recordType-meta.xml
<RecordType>
    <fullName>PaymentRequestFCY</fullName>
    <active>true</active>
    <label>Payment Request (FCY)</label>
</RecordType>