force-app/main/default/objects/OperationPaymentRequest__c/recordTypes/PaymentRequestLocal.recordType-meta.xml
<RecordType>
    <fullName>PaymentRequestLocal</fullName>
    <active>true</active>
    <label>Payment Request (Local)</label>
</RecordType>